--- a/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
+++ b/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
@@ -165,12 +165,12 @@ justify-content: flex-end;">
                       </div>
                   </div>
       
-                  <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
+                  <div style="    margin: 5px 0 10px;" class="row" >
                       <div class="col">
                           <label for="validationCustom03" class="form-label">Capacidad</label>
                       </div>
                       <div class="col">
-                          <select class="form-select" type="number"  id="validationCustom04" formControlName="capacidadPasajeros" required>
+                          <select class="form-select" type="number"  id="validationCustom04" required>
                               <option selected disabled value="">Seleccionar</option>
                               <option type="number" >2</option>
                               <option type="number" >4</option>
