--- a/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
+++ b/FrontTaller/src/app/crud-vehiculos/crud-vehiculos.component.html
@@ -3,19 +3,19 @@ display: flex;
 justify-content: flex-end;">
   <button style="width: 50px;
   height: 50px;" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
-      <mat-icon style="    font-size: 34px;
+    <mat-icon style="    font-size: 34px;
       width: 100%;">menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button data-bs-toggle="modal" data-bs-target="#staticBackdrop" mat-menu-item>
+      <mat-icon>directions_car</mat-icon>
+      <span>Agregar vehículo</span>
     </button>
-    <mat-menu #menu="matMenu">
-      <button data-bs-toggle="modal" data-bs-target="#staticBackdrop" mat-menu-item>
-        <mat-icon>directions_car</mat-icon>
-        <span>Agregar vehículo</span>
-      </button>
-      <button mat-menu-item>
-        <mat-icon style="color: #f44336;">exit_to_app</mat-icon>
-        <span>Salir</span>
-      </button>
-    </mat-menu>
+    <button mat-menu-item>
+      <mat-icon style="color: #f44336;">exit_to_app</mat-icon>
+      <span>Salir</span>
+    </button>
+  </mat-menu>
 </div>
 
 <div>
@@ -31,68 +31,69 @@ justify-content: flex-end;">
 
       <div style="padding: 10px; border: solid 1px #7e897e61; overflow: auto; height: 290px; ">
         <table mat-table [dataSource]="datos" class="mat-elevation-z8">
-  
+
           <!-- Position Column -->
           <ng-container matColumnDef="idPlaca">
             <th mat-header-cell *matHeaderCellDef> Placa </th>
             <td mat-cell *matCellDef="let element"> {{element.idPlaca}} </td>
           </ng-container>
-  
+
           <!-- Name Column -->
           <ng-container matColumnDef="tipo">
             <th mat-header-cell *matHeaderCellDef> Tipo de vehículo </th>
             <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
           </ng-container>
-  
+
           <!-- Weight Column -->
           <ng-container matColumnDef="marca">
             <th mat-header-cell *matHeaderCellDef> Marca </th>
             <td mat-cell *matCellDef="let element"> {{element.marca}} </td>
           </ng-container>
-  
+
           <!-- Symbol Column -->
           <ng-container matColumnDef="cilindraje">
             <th mat-header-cell *matHeaderCellDef> Cilindraje </th>
             <td mat-cell *matCellDef="let element"> {{element.cilindraje}} </td>
           </ng-container>
-  
+
           <!-- Symbol Column -->
           <ng-container matColumnDef="propietarioId">
             <th mat-header-cell *matHeaderCellDef> Propietario </th>
             <td mat-cell *matCellDef="let element"> {{element.propietarioId}} </td>
           </ng-container>
-  
+
           <!-- Symbol Column -->
           <ng-container matColumnDef="anio">
             <th mat-header-cell *matHeaderCellDef> Modelo </th>
             <td mat-cell *matCellDef="let element"> {{element.anio}} </td>
           </ng-container>
-  
+
           <ng-container matColumnDef="Gestion">
             <th mat-header-cell *matHeaderCellDef> Gestión </th>
             <td mat-cell *matCellDef="let element">
-  
-              <mat-icon class="cls-icon" (click)="deleteVahiculo(element.idPlaca)" style="color: red;">delete_forever</mat-icon>
+
+              <mat-icon class="cls-icon" (click)="deleteVahiculo(element.idPlaca)" style="color: red;">delete_forever
+              </mat-icon>
               <mat-icon class="cls-icon" (click)="editar()" style="color: green;">edit</mat-icon>
               <mat-icon class="cls-icon" (click)="trabajo()" style="color: blue;">settings</mat-icon>
-              
+
             </td>
-  
+
           </ng-container>
-  
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="4">No se encontró "{{input.value}}"</td>
           </tr>
-  
+
         </table>
       </div>
     </div>
   </div>
-  
+
 </div>
 
 
@@ -109,133 +110,130 @@ justify-content: flex-end;">
         <!--cuerpor del from-->
         <div>
           <div>
-              <form class="row g-3 needs-validation" novalidate>
-      
-                  <div style="    background: blue;
+            <form class="row g-3 needs-validation" novalidate>
+
+              <div style="    background: blue;
                   color: white;
                   height: 27px;">
-                      <h3>Agregar vehiculo</h3>
+                <h3>Agregar vehiculo</h3>
+              </div>
+              <div style="    margin: 20px 0 10px;" class="row " [formGroup]="formVehi">
+                <div class="col">
+                  <label for="validationCustom01" class="form-label">Placa</label>
+                </div>
+                <div class="col">
+                  <input type="text" class="form-control" id="validationCustom01" formControlName="idPlaca" required />
+                  <div class="invalid-feedback">Campo requerido</div>
+                </div>
+              </div>
+
+              <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formVehi">
+                <div class="col">
+                  <label for="validationCustom01" class="form-label">Tipo de vehículo</label>
+                </div>
+                <div class="col">
+                  <select class="form-select" id="validationCustom04" formControlName="tipo" required>
+                    <option selected disabled value="">Seleccionar</option>
+                    <option>Campero</option>
+                    <option>Bus</option>
+                  </select>
+                  <div class="invalid-feedback">Campo requerido</div>
+                </div>
+              </div>
+
+              <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formVehi">
+                <div class="col">
+                  <label for="validationCustom01" class="form-label">Marca</label>
+                </div>
+                <div class="col">
+                  <select class="form-select" id="validationCustom04" formControlName="marca" required>
+                    <option selected disabled value="">Seleccionar</option>
+                    <option>Jeep</option>
+                    <option>Mazda</option>
+                    <option>Ford</option>
+                  </select>
+                  <div class="invalid-feedback">Campo requerido</div>
+                </div>
+              </div>
+              <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
+                <div class="col">
+                  <label for="validationCustom02" class="form-label">Modelo</label>
+                </div>
+
+                <div class="col">
+                  <input type="number" class="form-control" id="validationCustom02" formControlName="anio" required />
+                  <div class="invalid-feedback">Campo requerido</div>
+                </div>
+              </div>
+
+              <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
+                <div class="col">
+                  <label for="validationCustom03" class="form-label">Capacidad</label>
+                </div>
+                <div class="col">
+                  <input type="number" class="form-control" id="validationCustom02" formControlName="capacidadPasajeros"
+                    required />
+                  <div class="invalid-feedback">Campo requerido.</div>
+                </div>
+              </div>
+
+              <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
+                <div class="col">
+                  <label for="validationCustom04" class="form-label">Cilindraje</label>
+                </div>
+
+                <div class="col">
+                  <select class="form-select" id="validationCustom04" formControlName="cilindraje" required>
+                    <option selected disabled value="">Seleccionar</option>
+                    <option>1600</option>
+                    <option>2000</option>
+                  </select>
+                  <div class="invalid-feedback">Campo requerido.</div>
+                </div>
+              </div>
+
+              <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
+                <div class="col">
+                  <label for="validationCustomUsername" class="form-label">Pais</label>
+                </div>
+
+                <div class="col">
+                  <div class="input-group has-validation">
+                    <select class="form-select" id="validationCustom04" formControlName="paisOrigen" required>
+                      <option selected disabled value="">Seleccionar</option>
+                      <option>EEUU</option>
+                      <option>China</option>
+                      <option>Artico</option>
+                    </select>
+                    <div class="invalid-feedback">Campo requerido.</div>
                   </div>
-                  <div style="    margin: 20px 0 10px;" class="row " [formGroup]="formVehi">
-                      <div class="col">
-                          <label for="validationCustom01" class="form-label" >Placa</label>
-                      </div>
-                      <div class="col">
-                          <input type="text" class="form-control" id="validationCustom01" formControlName="idPlaca" required />
-                          <div class="invalid-feedback">Campo requerido</div>
-                      </div>
+                </div>
+              </div>
+
+              <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
+                <div class="col">
+                  <label for="validationCustomUsername" class="form-label">Accesorios adicionales?</label>
+                </div>
+                <div class="col">
+                  <div class="input-group has-validation">
+                    <select class="form-select" id="validationCustom04" formControlName="accesorios" required>
+                      <option selected disabled value="">Seleccionar</option>
+                      <option>Si</option>
+                      <option>No</option>
+                      <option>No lo sé, tu dime</option>
+                    </select>
+                    <div class="invalid-feedback">Campo requerido.</div>
                   </div>
-      
-                  <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formVehi">
-                      <div class="col">
-                          <label for="validationCustom01" class="form-label">Tipo de vehículo</label>
-                      </div>
-                      <div class="col">
-                          <select class="form-select" id="validationCustom04" formControlName="tipo" required>
-                              <option selected disabled value="">Seleccionar</option>
-                              <option>Campero</option>
-                              <option>Bus</option>
-                          </select>
-                          <div class="invalid-feedback">Campo requerido</div>
-                      </div>
-                  </div>
-      
-                  <div style="    margin: 5px 0 10px;" class="row " [formGroup]="formVehi">
-                      <div class="col">
-                          <label for="validationCustom01" class="form-label">Marca</label>
-                      </div>
-                      <div class="col">
-                          <select class="form-select" id="validationCustom04" formControlName="marca" required>
-                              <option selected disabled value="">Seleccionar</option>
-                              <option>Jeep</option>
-                              <option>Mazda</option>
-                              <option>Ford</option>
-                          </select>
-                          <div class="invalid-feedback">Campo requerido</div>
-                      </div>
-                  </div>
-                  <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
-                      <div class="col">
-                          <label for="validationCustom02" class="form-label">Modelo</label>
-                      </div>
-      
-                      <div class="col">
-                          <input type="number" class="form-control" id="validationCustom02" formControlName="anio" required />
-                          <div class="invalid-feedback">Campo requerido</div>
-                      </div>
-                  </div>
-      
-                  <div style="    margin: 5px 0 10px;" class="row" >
-                      <div class="col">
-                          <label for="validationCustom03" class="form-label">Capacidad</label>
-                      </div>
-                      <div class="col">
-                          <select class="form-select" type="number"  id="validationCustom04" required>
-                              <option selected disabled value="">Seleccionar</option>
-                              <option type="number" >2</option>
-                              <option type="number" >4</option>
-                              <option type="number" >6</option>
-                          </select>
-                          <div class="invalid-feedback">Campo requerido.</div>
-                      </div>
-                  </div>
-      
-                  <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
-                      <div class="col">
-                          <label for="validationCustom04" class="form-label">Cilindraje</label>
-                      </div>
-      
-                      <div class="col">
-                          <select class="form-select" id="validationCustom04" formControlName="cilindraje" required>
-                              <option selected disabled value="">Seleccionar</option>
-                              <option>1600</option>
-                              <option>2000</option>
-                          </select>
-                          <div class="invalid-feedback">Campo requerido.</div>
-                      </div>
-                  </div>
-      
-                  <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi" >
-                      <div class="col">
-                          <label for="validationCustomUsername" class="form-label">Pais</label>
-                      </div>
-      
-                      <div class="col">
-                          <div class="input-group has-validation">
-                              <select class="form-select" id="validationCustom04" formControlName="paisOrigen" required>
-                                  <option selected disabled value="">Seleccionar</option>
-                                  <option>EEUU</option>
-                                  <option>China</option>
-                                  <option>Artico</option>
-                              </select>
-                              <div class="invalid-feedback">Campo requerido.</div>
-                          </div>
-                      </div>
-                  </div>
-      
-                  <div style="    margin: 5px 0 10px;" class="row" [formGroup]="formVehi">
-                      <div class="col">
-                          <label for="validationCustomUsername" class="form-label">Accesorios adicionales?</label>
-                      </div>
-                      <div class="col">
-                          <div class="input-group has-validation">
-                              <select class="form-select" id="validationCustom04" formControlName="accesorios" required>
-                                  <option selected disabled value="">Seleccionar</option>
-                                  <option>Si</option>
-                                  <option>No</option>
-                                  <option>No lo sé, tu dime</option>
-                              </select>
-                              <div class="invalid-feedback">Campo requerido.</div>
-                          </div>
-                      </div>
-                  </div>
-              </form>
+                </div>
+              </div>
+            </form>
           </div>
-      </div>
+        </div>
         <!--fin del cuerpo del modal-->
       </div>
       <div style="padding: 0 0 10px 10px">
-        <button data-bs-dismiss="modal" (click)="saveVehi()" style="width: 32%; ;" class="btn btn-outline-success" type="button">Agregar
+        <button data-bs-dismiss="modal" (click)="saveVehi()" style="width: 32%; ;" class="btn btn-outline-success"
+          type="button">Agregar
         </button>
         <!-- este boton lo que hace es guardar y arrancar el segundo modal
           <button data-bs-target="#exampleModalToggle2" data-bs-toggle="modal" (click)="saveUser()" style="width: 32%; ;" class="btn btn-outline-success" type="button">Agregar
@@ -245,4 +243,3 @@ justify-content: flex-end;">
     </div>
   </div>
 </div>
-
