--- a/FrontTaller/src/app/layout/toolbar/toolbar.component.html
+++ b/FrontTaller/src/app/layout/toolbar/toolbar.component.html
@@ -1,7 +1,12 @@
 <mat-toolbar style="display: flex;
 justify-content: space-between; align-items: center; background: #00a1ff99;;
-height: 37px;">
+height: 46px;">
     <span>Enlekema</span>
+    <div >
+        <span></span>
+        <mat-icon style="color: white; font-size: 33px;">supervised_user_circle</mat-icon>
+    </div>
+    
 </mat-toolbar>
 
 
