--- a/FrontTaller/src/app/layout/toolbar/toolbar.component.html
+++ b/FrontTaller/src/app/layout/toolbar/toolbar.component.html
@@ -3,8 +3,8 @@ justify-content: space-between; align-items: center; background: #00a1ff99;;
 height: 46px;">
     <span>Enlekema</span>
     <div >
-        <span></span>
-        <mat-icon style="color: white; font-size: 33px;">supervised_user_circle</mat-icon>
+        
+        <mat-icon style="color: white; font-size: 40px!important; overflow: inherit!important; margin: 10px 34px;">supervised_user_circle</mat-icon>
     </div>
     
 </mat-toolbar>
