--- a/FrontTaller/src/app/layout/toolbar/toolbar.component.html
+++ b/FrontTaller/src/app/layout/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@ justify-content: space-between; align-items: center; background: #00a1ff99;;
 height: 46px;">
     <span>Enlekema</span>
     <div >
-        
+        <mat-icon routerLink="/login" style="color: white; font-size: 40px!important; overflow: inherit!important; margin: 10px 34px;">login</mat-icon>
         <mat-icon style="color: white; font-size: 40px!important; overflow: inherit!important; margin: 10px 34px;">supervised_user_circle</mat-icon>
     </div>
     
