--- a/FrontTaller/src/app/layout/sidebar/sidebar.component.html
+++ b/FrontTaller/src/app/layout/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
 <div class="cls-content-sidebar">
-  <span routerLink="/jefeoperacion">Jefe de operciones</span>
-  <span routerLink="/cliente">Propietario (cliente)</span>
+  <span routerLink="/jefeoperacion">Jefe de Operaciones</span>
+  <span routerLink="/cliente">Propietario (Cliente)</span>
 </div>
