--- a/FrontTaller/src/app/login/login.component.html
+++ b/FrontTaller/src/app/login/login.component.html
@@ -1,1 +1,20 @@
-<p>login works!</p>
+<div class="login">
+    <form class="custom-form" method="post">
+      <h1>Inicio Sesion</h1>
+      <input
+        type="email"
+        [(ngModel)]="email"
+        name="email"
+        placeholder="Email"
+        required="required"
+      />
+      <input
+        type="password"
+        [(ngModel)]="password"
+        name="password"
+        placeholder="Password"
+        required="required"
+      />
+      <button type="submit" (click)="login()">Iniciar Sesion</button>
+    </form>
+  </div>
