--- a/FrontTaller/src/app/layout/sidebar/sidebar.component.html
+++ b/FrontTaller/src/app/layout/sidebar/sidebar.component.html
@@ -1,4 +1,6 @@
 <div class="cls-content-sidebar">
   <span routerLink="/jefeoperacion">Jefe de Operaciones</span>
   <span routerLink="/cliente">Propietario (Cliente)</span>
+  <span routerLink="/revisiones">Revisiones</span>
+
 </div>
